# numerical

./: Cargo.toml  README.md
backup/: base_float.rs  dim1_func.rs  dim1_solver.rs
backup/dim1_solver/: brent.rs  fixed_point.rs
backup/tensor/: matrix.rs  vector.rs
backup/tests/: bisection.rs  brent.rs  full_matrix_inner_vec.rs  polynomial.rs  ut_matrix_inner_vec.rs
crates/fft/: Cargo.toml
crates/floating_point/: Cargo.toml
crates/interpolation/: Cargo.toml
crates/interpolation/examples/: chebyshev_0.rs  polynomial_interpolation_plot_0.rs  runge_phenomenon_0.rs  runge_phenomenon_1.rs
crates/interpolation/src/: polynomial.rs
crates/matrix/: Cargo.toml
docs/chapter0/: float_point.ipynb
docs/chapter1/: solve_equation.ipynb
docs/chapter10/: fft.ipynb
docs/chapter2/: gaussian_elimination.ipynb  iterative_methods.ipynb  nonlinear_equations.ipynb  symmetric_positive_definite.ipynb
docs/chapter3/: interpolation_error.ipynb  polynomial_interpolation.ipynb
docs/chapter4/: GMRES.ipynb  nonlinear_least_squares.ipynb
docs/chapter5/: differentiation.ipynb  intergration.ipynb
docs/chapter6/: ivp.ipynb  multistep_methods.ipynb  runge_kutta.ipynb
docs/chapter7/: bvp.ipynb
docs/chapter8/: elliptic_equations.ipynb  pde.ipynb  (+1 more)
python/: dim_solver.ipynb
src/: base_float.rs  dim1_func.rs  dim1_solver.rs  helpers.rs  lib.rs  polynomial.rs
tests/: bisection.rs  brent.rs  dim1newton.rs  fixed_point.rs  full_matrix_inner_vec.rs  lt_matrix_inner_vec.rs  matrix.rs  permutation.rs  polynomial.rs  square_matrix_inner_vec.rs  ut_matrix_inner_vec.rs
(+51 files in other folders)
