[package]
name = "numerical"
version = "0.1.5"
edition = "2021"
description = "Algorithm for numerical analysis"
license = "MIT"
authors = ["milkycopper <liuhahapku@gmail.com>"]
repository = "https://github.com/milkycopper/numerical"
documentation = "https://docs.rs/numerical"
readme = "README.md"

[dependencies]
core_float = "0.3.0"
log = "0.4"
approx = "0.5"

[dev-dependencies]
env_logger = "0.10"
