[package]
name = "interpolation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
floating_point = { path = "../floating_point" }

[dev-dependencies]
plotly = { version = "0.8.4", features = [] }

[[example]]
name = "polynomial_interpolation_plot_0"
